# simu_robot

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
ik_minimal_example/: DIAGNOSTICS.md  README.md  test_ik.py
ros2_ws/src/soarm_description/: CMakeLists.txt  package.xml
ros2_ws/src/soarm_description/config/: controllers.yaml
ros2_ws/src/soarm_description/launch/: rviz.launch.py
ros2_ws/src/soarm_description/rviz/: default.rviz
ros2_ws/src/soarm_description/urdf/: so101.urdf.xacro
ros2_ws/src/soarm_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/soarm_gazebo/config/: gz_bridge.yaml
ros2_ws/src/soarm_gazebo/launch/: full_sim.launch.py  gazebo.launch.py
ros2_ws/src/soarm_gazebo/worlds/: tracking_world.sdf
ros2_ws/src/soarm_tracking/: package.xml  setup.cfg  setup.py
ros2_ws/src/soarm_tracking/soarm_tracking/: arm_planner.py  color_detector.py  recorder.py  square_mover.py
